# sdkwork-sdk-backend

./: .gitignore  README.md  backend-openapi-18081-live.json  backend-openapi-8080.json  backend-openapi-8080.repaired.json  backend-openapi-8080.sanitized.json  backend-openapi-8081.json  backend-openapi-8081.repaired.json  backend-openapi-8081.sanitized.json  openai-openapi-8081.json  openai-openapi-from-all-8081.json
sdkwork-backend-sdk-python/: MANIFEST.in  README.md  pyproject.toml  setup.py
sdkwork-backend-sdk-python/sdkwork_backend_sdk/: __init__.py  client.py  http_client.py
sdkwork-backend-sdk-python/sdkwork_backend_sdk/api/: __init__.py  account.py  account_exchange_config.py  account_history.py  agent.py  agent_chat.py  agent_tool_relationship.py  ai_agent.py  ai_agent_chat.py  ai_agent_tool_relationship.py  ai_article.py  ai_audio_effect_generation.py  ai_audio_generation.py  ai_category.py  ai_character_generation.py  ai_chat.py  ai_conversation.py  ai_generation.py  ai_generation_content.py  ai_image_generation.py  ai_model_information.py  ai_model_price.py  ai_music_generation.py  ai_prompt.py  ai_tool.py  ai_usage_record.py  ai_video_generation.py  ai_voice_speaker_generation.py  api_key.py  api_security_policy.py  apikey.py  app.py  application.py  article.py  attribute.py  audio_effect_generation.py  audio_generation.py  auth.py  authentication.py  authorization.py  (+145 more)
sdkwork-backend-sdk-python/sdkwork_backend_sdk/models/: __init__.py  account_config_metadata.py  account_exchange_rate_update_form.py  account_exchange_rate_vo.py  aec_config.py  (+1220 more)
(+7710 files in other folders)
